--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod && firebase deploy",
+    "work": "code . && ng serve --open"
   },
   "private": true,
   "dependencies": {
