--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
     "angular-star-rating": "^4.0.0-beta.3",
+    "bcrypt": "^2.0.1",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.6",
     "css-star-rating": "^1.2.4",
     "font-awesome": "^4.7.0",
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.10",
+    "ssri": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.5",
+    "@angular/cli": "^6.0.3",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^5.2.11",
     "@types/jasmine": "^2.8.7",
@@ -51,6 +54,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "@angular-devkit/build-angular": "~0.6.3"
   }
 }
