--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "src/assets/slick/slick.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
