--- a/package.json
+++ b/package.json
@@ -27,28 +27,29 @@
     "@angular/router": "^5.2.11",
     "angular-star-rating": "^4.0.0-beta.3",
     "bcrypt": "^2.0.1",
-    "bootstrap": "^4.1.1",
-    "core-js": "^2.5.6",
+    "bootstrap": "^4.1.3",
+    "core-js": "^2.5.7",
     "css-star-rating": "^1.2.4",
     "font-awesome": "^4.7.0",
-    "hoek": "^5.0.3",
+    "hoek": "^5.0.4",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3",
-    "rxjs": "^5.5.10",
-    "ssri": "^6.0.0",
+    "popper.js": "^1.14.4",
+    "rxjs": "^5.5.12",
+    "ssri": "^6.0.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.3",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^5.2.11",
-    "@types/jasmine": "^2.8.7",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.111",
-    "codelyzer": "^4.3.0",
+    "@types/node": "^6.0.117",
+    "codelyzer": "^4.4.4",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
@@ -56,7 +57,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
-    "@angular-devkit/build-angular": "~0.6.3"
+    "typescript": "~2.5.3"
   }
 }
