--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --prod --output-hashing none --base-href='http://farma.vbrqx.com/'",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
