--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "font-awesome": "^4.7.0",
     "hoek": "^5.0.4",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "popper.js": "^1.14.4",
     "rxjs": "^5.5.12",
     "ssri": "^6.0.1",
