--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js": "^2.5.7",
     "css-star-rating": "^1.2.4",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "hoek": "^5.0.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
